assets/css/audacious.scss
---
---
@charset "utf-8";

/*
  Designed by Kyle Dreger.

  An amalgamation of parts of the web that I admire. Includes:
  - couldal.com
  - daringfireball.net
  - kottke.org
  - pxlnv.com
  - signalvnoise.com
  - fivethirtyeight.com

  On the shoulders of giants, so they say.
*/

$max-width: 42rem;
$line-height: 1.5em;
$font-size-small: .95em;
$sans: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
$serif: $sans, Georgia, serif;

$color: #fed464; // nyt insider
$color: #2282e2; //nyt blue
$color: #F48845; // tan
$color: #79BD9A; // teal
$color: #4acd89; // teal
$color: #ffb000; // gold
$color: rgb(255, 0, 0); // red
$color: rgb(0, 255, 0); // green
$color: #ed2b23;
$color: rgb(0, 0, 255); // blue
$color: rgb(0,122,255);
$color-darker: darken($color, 13%);
$color-bg: #fafafa; //faf8f5
$color-lighter-bg: white;
$color-copy: #222;
$color-faded: #585858;
$color-really-faded: #cecece;
$color-blockquote: $color-really-faded;

// DARK
// $color: #22eac8;
// $color: rgb(0, 255, 0);
// $color-copy: #f8f8f8;
// $color-faded: #81898e;
// $color-bg: #3A3F43;
// $color-lighter-bg: #2E3337;
// $color-blockquote: $color-bg;

* {
  -moz-box-sizing: content-box;
  box-sizing: content-box;
}
html {
  font-size: 14px;
}
body {
    -webkit-font-smoothing: antialiased;
    margin: 0;
    color: $color-copy;
    padding: 0;
    padding: 4rem 0;
    background: $color-bg;
    font-weight: normal;
    font-style: normal;
    font-family: $sans;
    line-height: $line-height;
}

h1,
h2,
h3,
h4,
h5,
h6,
p,
blockquote,
img,
ol,
ul {
  margin: 0 0 1.5rem 0;
}

h1,
h2,
h3 { font-family: $sans; }

h1 {
  font-size: 1.31875rem;
  line-height: 1.1em;
  line-height: 1.3875em;
  font-weight: 400;
  a {
    color: $color-copy;
    text-decoration: none;
    border: 0;
  }
}

h2 {
  font-size: 1.025rem;
  font-size: 1.015rem;
  line-height: 1.3875em;
  font-weight: normal;
  text-transform: uppercase;
  letter-spacing: .1em;
  margin: 2rem 0 1rem 0;
}

h3 {
  margin-bottom: .25rem;
  line-height: 1.1em;
  font-size: .9rem;
}

article {
  background: $color-lighter-bg;
  padding: 1.25rem 1.5rem;
  position: relative;
  margin-bottom: 1.5rem;
  border: solid 1px #eee;
  border-radius: 4px;
  p:last-child { margin-bottom: 0; }
}

img {
  width: 100%;
  display: block;
  position: relative;
}

blockquote {
  padding: .25rem 1rem;
  // background: lighten($color, 40%);
  border-left: 2px solid $color;
  // background: $color-bg; // Dark

  blockquote {
    // background: lighten($color, 30%);
    margin: 1.5rem 0;
    padding: 1rem;
  }
  > p { margin-bottom: 0; }
  + blockquote {
    margin-top: -1.5rem;
    padding-top: .75rem;
  }
}

pre {
  overflow: scroll;
  background: $color-blockquote;
  padding: .5rem;
  line-height: 1.1em;
  font-size: $font-size-small;
}

code {
  background: $color-bg;
  font-size: $font-size-small;
  padding: 2px 4px;
  border-radius: 2px;
}

ol,
ul {
  padding-left: 1.25em;
}

ul li { list-style: square; }

hr {
  height: 1px;
  background: none;
  border: none;
  display: block;
  margin: 1.5rem 0;
  position: relative;
  right: -1.5rem;
  width: 100%;
  border-top: solid 2px $color-bg;
}

hr + ol {
 font-size: $font-size-small;
  li {
    margin-bottom: .5em;
    line-height: $line-height;
  }
}

strong {
  @extend .small-caps;
  font-weight: 500;
}

a {
  color: $color;
  // border-bottom: solid lighten($color, 30%) 1px;
  // padding-bottom: .1em;
  text-decoration: none;
  font-weight: 500;
  &:hover {
    text-decoration: underline;
    color: darken($color, 8%);
  }
}



.wrapper {
  max-width: $max-width;
  margin: 0 auto;
}

.navigation {
  flex-shrink: 0;
  width: 23%;
  text-align: right;
  padding-right: 2.5rem;
  font-family: $sans;
  line-height: $line-height;
  ul {
    padding: 0;
  }
  li {
    list-style: none;
    margin: .5rem 0;
    padding: 0;
    a {
      @extend .small-caps;
    }
  }
}

.content {
  flex: 1;
}

.title {
  font-size: 1.5rem;
  font-weight: normal;
  display: block;
}

.logo {
  text-align: center;
  img {
    max-width: 230px;
    margin: 0;
  }
  padding: .5rem .75rem;
  display: inline-block;
  border: 0;
  margin-bottom: 2.5rem;
  // border-bottom: solid 5px transparent;
  &:hover {
    // border-bottom-color: $color;
    background: darken($color-bg, 5%);
  }
}

.link {
  margin-top: 0;
  display: flex;
}
.link-target {
  flex: 1;
}
.link-permalink {
  color: $color-faded;
  line-height: 1em;
	padding-left: 1rem;
  text-decoration: none;
  &:hover { color: $color; }
}

.archive li {
  margin-bottom: 1.5rem;
}

.date {
  @extend .small-caps;
  margin: 3rem 0 1.5rem 1.5rem;
  color: $color-faded;
}

.flex { display: flex; }

.interview {
  margin-left: 1.5rem;
  margin-bottom: 1.5rem;
  h1,
  h2,
  h3,
  .name, strong {
    margin-left: -1.5rem;
  }
  .name { @extend .small-caps; }
}

.small-caps {
  text-transform: uppercase;
  letter-spacing: .1em;
  font-size: $font-size-small;
}

.faded { color: $color-faded; }
.font-small { font-size: $font-size-small;}

@media (max-width: $max-width+2rem) {
  html {
    font-size: 16px;
  }
  body {
    padding: 1rem 0;
  }
  article {
    border: 0; 
  }
  .logo {
    margin: 0 0 .5rem;
    display: block;
    img {
      margin: 0 auto;
      max-width: 230px;
    }
  }
  .wrapper {
    display: initial;
  }
  .navigation {
    width: 100%;
    text-align: center;
    margin: 0 auto 1.5rem;
    padding-right: 0;
    li {
      padding: 0 .5em;
      display: inline;
    }
  }
  .byline { display: none; }
}

